# octo-ledger

./: .gitignore  Cargo.toml  Claude.md  README.md
docs/: .gitignore  prompt-log.md
docs/plans/: octo-ledger-bootstrap-plan.md  octo-ledger-disk-backed-stores-plan.md  octo-ledger-dispute-resolve-chargeback-plan.md
examples/: chargeback.csv  dispute.csv  edge_cases.csv  happy_path.csv  large.csv  malformed.csv  resolve.csv
src/: engine.rs  error.rs  ledger.rs  main.rs  model.rs  parser.rs  printer.rs  reader.rs  store.rs
tests/: integration_test.rs
tests/scale/: mod.rs
