[package]
name = "octo-ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
nutype = { version = "0.7.0", features = ["serde"] }
redb = "2"
rust_decimal = { version = "1.42.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.18"
